--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-PORT=3002
-# REACT_APP_BASE_URL=
-# REACT_APP_BASE_URL_USER=https://cktdev.onrender.com/
-REACT_APP_BASE_URL_USER=http://170.187.227.183:3005/
+PORT=9000
+REACT_APP_BASE_USE_URL=https://nodejs-be.onrender.com/
